added index, login and register pages components

--- a/src/features/chats/components/chatsHeader/chatsHeader.pug
+++ b/src/features/chats/components/chatsHeader/chatsHeader.pug
@@ -1,5 +1,5 @@
 div(class='chats-header')
-    include ../../../../components/link/link
+    include ../../../../components/link/link.template.ts
     +link('Profile', '../../pages/profile/profile.pug', 'chats-header__link')
     div(class='chats-search')
         input(class='chats-search__input' placeholder='Поиск')
