--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -7,6 +7,7 @@
   border-left: none;
   border-top: none;
   transition: 0.3s border-color;
+  margin-bottom: 10px;
   &:focus {
     border-color: $color-blue;
   }
