--- a/src/features/index.scss
+++ b/src/features/index.scss
@@ -2,3 +2,5 @@
 @import "./chats/components/chatsList/chatsList";
 @import "./chats/components/chatsHeader/chatsHeader";
 @import "./profile/components/profileModal/profileModal";
+@import "./chats/components/chatWindow/chatWindow";
+@import "./chats/components/chatInput/chatInput";
