--- a/src/pages/messenger/messenger.scss
+++ b/src/pages/messenger/messenger.scss
@@ -14,14 +14,18 @@
 }
 
 .dialog {
+  width: 100%;
   display: flex;
+  flex-direction: column;
   flex-grow: 1;
   justify-content: center;
   align-items: center;
-  background-color: $colors-beckers-lammul;
+  background-color: $color-white;
+  padding: 0 10px 0 10px;
 }
 
 .dialog__empty {
+  height: calc(100% - 108px);
   font-size: 12px;
   color: $colors-rackham-grey;
 }
